fixed input pipeline

--- a/examples/protyping/pymedphys-segmentation/dicom_process_example.ipynb
+++ b/examples/protyping/pymedphys-segmentation/dicom_process_example.ipynb
@@ -61,9 +61,10 @@
    "outputs": [],
    "source": [
     "# Vet case\n",
-    "DATA_PATH = \"/home/matthew/proj/masters-project/pymedphys-segmentation/open_datasets/VET_DATASET_CLEAN/\"\n",
+    "#DATA_PATH = \"/home/matthew/proj/masters-project/pymedphys-segmentation/open_datasets/VET_DATASET_CLEAN/\"\n",
     "# Structure masks to be pulled\n",
-    "STRUCTURE_NAMES = [\"patient\", \"Vacbag\", \"vacbag\", \"Couch Foam Half Couch\", \"Couch Outer Half Couch\", \"Couch Edge\"]"
+    "#STRUCTURE_NAMES = [\"patient\", \"Vacbag\", \"vacbag\", \"Couch Foam Half Couch\", \"Couch Outer Half Couch\", \"Couch Edge\"]\n",
+    "#STRUCTURE_NAMES = [\"Vacbag\"]"
    ]
   },
   {
@@ -73,9 +74,10 @@
    "outputs": [],
    "source": [
     "# Prostate case\n",
-    "#DATA_PATH = \"/home/matthew/priv/PROSTATE_TEST/\"\n",
+    "DATA_PATH = \"/home/matthew/priv/PROSTATE_TEST/\"\n",
     "# Structure masks to be pulled\n",
-    "#STRUCTURE_NAMES = [\"patient\", \"RT HOF\", \"LT HOF\", \"BLADDER\", \"RECTUM\", \"Couch Foam Half Couch\", \"Couch Outer Half Couch\", \"Couch Edge\"]"
+    "# STRUCTURE_NAMES = [\"patient\", \"RT HOF\", \"LT HOF\", \"BLADDER\", \"RECTUM\", \"Couch Foam Half Couch\", \"Couch Outer Half Couch\", \"Couch Edge\"]\n",
+    "STRUCTURE_NAMES = [\"BLADDER\"]"
    ]
   },
   {
@@ -168,38 +170,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# so far this only contains one label - need to rework so adds all - TODO above\n",
-    "print(len(labels))\n",
-    "print(labels.shape)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Lets examine the structure labels in our data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for index, data in enumerate(loaded_data):\n",
-    "    structures = data[3]\n",
-    "    print(data_folders[index])\n",
-    "    helpers.print_structures(structures)\n",
-    "    print(\"----------------------------\")\n",
-    "    "
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -245,7 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "helpers.print_dicom_slice_data(dicom_series[0])\n",
+    "#helpers.print_dicom_slice_data(dicom_series[0])\n",
     "# np.uint16 - Unsigned integer (0 to 65535)"
    ]
   },
@@ -255,8 +225,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "z_slice_locations = np.array([dicom.ImagePositionPatient[2] for dicom in dicom_series])\n",
-    "print(z_slice_locations)"
+    "#z_slice_locations = np.array([dicom.ImagePositionPatient[2] for dicom in dicom_series])\n",
+    "#print(z_slice_locations)"
    ]
   },
   {
@@ -266,7 +236,7 @@
    "outputs": [],
    "source": [
     "# moving slice locations from patient space to pixel space (image space)\n",
-    "((z_slice_locations - np.min(z_slice_locations)) / dicom_series[0].SliceThickness)"
+    "#((z_slice_locations - np.min(z_slice_locations)) / dicom_series[0].SliceThickness)"
    ]
   },
   {
@@ -286,41 +256,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# View single image data\n",
-    "helpers.plot_pixel_array(images[SLICE_INDEX])\n",
-    "helpers.print_range(images)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# View single image data - resized\n",
-    "images_resized = dicom_process.resize_pixel_array(images, SIZE)\n",
-    "helpers.plot_pixel_array(images_resized[SLICE_INDEX])\n",
-    "helpers.print_range(images_resized)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# View single image data - resized and normalised\n",
-    "images_resized_normal = dicom_process.normalise_pixel_array_volume(images_resized)\n",
-    "helpers.plot_pixel_array(images_resized_normal[SLICE_INDEX])\n",
-    "helpers.print_range(images_resized_normal)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -337,7 +272,7 @@
     "# Note dicom_structures is returned as a like like dicom_series\n",
     "# to get the first RS dicom file found use the first index dicom_structures[0]\n",
     "structures = dicom_process.read_structures(dicom_structures[0])\n",
-    "helpers.print_structures(structures)"
+    "#helpers.print_structures(structures)"
    ]
   },
   {
@@ -348,7 +283,7 @@
    "source": [
     "# clean the structures\n",
     "structures = dicom_process.clean_structures(structures, STRUCTURE_NAMES)\n",
-    "helpers.print_structures(structures)"
+    "#helpers.print_structures(structures)"
    ]
   },
   {
@@ -358,8 +293,8 @@
    "outputs": [],
    "source": [
     "# how my dicts work\n",
-    "patient = structures[0]\n",
-    "print(patient.keys())"
+    "#patient = structures[0]\n",
+    "#print(patient.keys())"
    ]
   },
   {
@@ -369,10 +304,10 @@
    "outputs": [],
    "source": [
     "# extracting contour points\n",
-    "patient_xyz = patient['contour_points']\n",
-    "z_slice_contour_data = patient_xyz[0]\n",
-    "xyz_points = np.array(z_slice_contour_data).reshape((-1, 3))\n",
-    "print(xyz_points[0:10])"
+    "#patient_xyz = patient['contour_points']\n",
+    "#z_slice_contour_data = patient_xyz[0]\n",
+    "#xyz_points = np.array(z_slice_contour_data).reshape((-1, 3))\n",
+    "#print(xyz_points[0:10])"
    ]
   },
   {
@@ -390,8 +325,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "helpers.plot_model_data(images, labels, SLICE_INDEX)"
+    "#SLICE_INDEX = 80\n",
+    "#helpers.plot_model_data(images, labels, SLICE_INDEX)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -543,11 +486,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_context(pixel_array_volume, index, context=10):\n",
-    "    \"\"\"\n",
-    "    # TODO write docstring\n",
-    "    \"\"\"\n",
-    "    return pixel_array_volume[index - context:index + context + 1]"
+    "import imageio"
    ]
   },
   {
@@ -556,16 +495,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "OUTPUT_PATH = \"/home/matthew/proj/masters-project/pymedphys-segmentation/open_datasets/model_data/\"\n",
-    "context = 10\n",
-    "for index in range(len(images)):\n",
-    "    temp = get_context(images, index, context)\n",
+    "\n",
+    "OUTPUT_PATH = \"/home/matthew/proj/masters-project/pymedphys-segmentation/output/\"\n",
+    "#CONTEXT = 10\n",
+    "for index, image in enumerate(images):\n",
+    "    #temp = get_context(images, index, CONTEXT)\n",
     "    # skip those that dont have enough padding\n",
     "    # this is a quick and dirt hack to be fixed\n",
-    "    if temp.shape[0] == 1 + 2 * context:\n",
-    "        input_instance = temp\n",
-    "        label_instance = labels[index]\n",
-    "        data_instance = [input_instance, label_instance]"
+    "    \n",
+    "    #if temp.shape[0] == 1 + 2 * CONTEXT:\n",
+    "    label_instance = labels[index]\n",
+    "    \n",
+    "    fill = len(str(len(images)))\n",
+    "    \n",
+    "    image_name = OUTPUT_PATH + \"/image/\" + str(index).zfill(fill) + \".tif\"\n",
+    "    label_name = OUTPUT_PATH + \"/label/\" + str(index).zfill(fill) + \".tif\"\n",
+    "    \n",
+    "\n",
+    "        \n",
+    "    imageio.imwrite(image_name, image)\n",
+    "    imageio.imwrite(label_name, label_instance)\n",
+    "        "
    ]
   },
   {
@@ -574,7 +524,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(label_instance)"
+    "file1 = OUTPUT_PATH + \"/image/\" + \"001\" + \".png\"\n",
+    "im1 = imageio.imread(file1)\n",
+    "file2 = OUTPUT_PATH + \"/image/\" + \"001\" + \".tif\"\n",
+    "im2 = imageio.imread(file2)"
    ]
   },
   {
@@ -582,7 +535,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "im"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dicom_series[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dicom_series[-1]"
+   ]
   },
   {
    "cell_type": "code",
