Misc notebook changes

--- a/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Compare Monaco and iCOM.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Compare Monaco and iCOM.ipynb
@@ -127,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "patient_id = '014495'"
+    "patient_id = '015125'"
    ]
   },
   {
@@ -286,8 +286,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "monaco_plan_and_file_name = 'RAXILLARETREAT/tel.1'  # plan directory and file name\n",
-    "icom_deliveries = ['20020101_054014']  # iCOM timestamps"
+    "monaco_plan_and_file_name = 'SCALP/tel.1'  # plan directory and file name\n",
+    "icom_deliveries = ['20200221_161718']  # iCOM timestamps"
    ]
   },
   {
