--- a/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Direct Logfile Monaco compare.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Direct Logfile Monaco compare.ipynb
@@ -73,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "patient_id = '014484'\n",
+    "patient_id = '015125'\n",
     "\n",
     "percent_deviation = 2\n",
     "mm_dist_threshold = 0.5"
@@ -136,8 +136,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "monaco_plan_name = 'PROSTATE'\n",
-    "mosaiq_site = 'PROSTATE'"
+    "monaco_plan_name = 'SCALP'\n",
+    "mosaiq_site = 'SCALP'"
    ]
   },
   {
@@ -266,6 +266,13 @@
     "    except Exception as e:\n",
     "        traceback.print_exc()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
