--- a/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/analyse_most_recent_image.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/analyse_most_recent_image.ipynb
@@ -31,7 +31,7 @@
    "outputs": [],
    "source": [
     "penumbra = 2\n",
-    "edge_lengths = [20, 20]\n",
+    "edge_lengths = [30, 30]\n",
     "initial_rotation = 0\n",
     "bb_diameter = 8\n",
     "\n",
@@ -126,7 +126,7 @@
     "    x, y, img = pymedphys._wlutz.iview.iview_image_transform(decoded_path)\n",
     "\n",
     "    field = pymedphys._wlutz.imginterp.create_interpolated_field(x, y, img)\n",
-    "    initial_centre = pymedphys._wlutz.findfield._initial_centre(x, y, img)\n",
+    "    initial_centre = pymedphys._wlutz.findfield.get_centre_of_mass(x, y, img)\n",
     "\n",
     "    field_centre, field_rotation = pymedphys._wlutz.findfield.field_centre_and_rotation_refining(\n",
     "        field, edge_lengths, penumbra, initial_centre, initial_rotation=initial_rotation, pylinac_tol=np.inf\n",
@@ -175,6 +175,13 @@
    "source": [
     "np.mean(np.array(field_centres) - np.array(bb_centres), axis=0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
