update last two images notebook

--- a/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/analyse_most_recent_image.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/analyse_most_recent_image.ipynb
@@ -31,7 +31,7 @@
    "outputs": [],
    "source": [
     "penumbra = 2\n",
-    "edge_lengths = [20, 20]\n",
+    "edge_lengths = [100, 100]\n",
     "initial_rotation = 0\n",
     "bb_diameter = 8\n",
     "\n",
@@ -123,13 +123,13 @@
     "\n",
     "for decoded_path in decoded_paths:\n",
     "\n",
-    "    x, y, img = pymedphys._wlutz.iview.iview_image_transform(decoded_path)\n",
+    "    x, y, img = pymedphys._wlutz.iview.iview_image_transform_from_path(decoded_path)\n",
     "\n",
     "    field = pymedphys._wlutz.imginterp.create_interpolated_field(x, y, img)\n",
-    "    initial_centre = pymedphys._wlutz.findfield._initial_centre(x, y, img)\n",
+    "    initial_centre = pymedphys._wlutz.findfield.get_centre_of_mass(x, y, img)\n",
     "\n",
     "    field_centre, field_rotation = pymedphys._wlutz.findfield.field_centre_and_rotation_refining(\n",
-    "        field, edge_lengths, penumbra, initial_centre, initial_rotation=initial_rotation, pylinac_tol=np.inf\n",
+    "        field, edge_lengths, penumbra, initial_centre, fixed_rotation=0, pylinac_tol=np.inf\n",
     "    )   \n",
     "\n",
     "    bb_centre = pymedphys._wlutz.findbb.optimise_bb_centre(\n",
@@ -186,9 +186,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pymedphys-master",
    "language": "python",
-   "name": "python3"
+   "name": "pymedphys-master"
   },
   "language_info": {
    "codemirror_mode": {
