--- a/examples/protyping/mocks/bb-mocks.ipynb
+++ b/examples/protyping/mocks/bb-mocks.ipynb
@@ -6,6 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import warnings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -186,7 +195,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def create_bb_attenuation_func(diameter, penumbra, max_attenuation):\n",
+    "    dx = diameter / 100\n",
+    "    radius = diameter / 2\n",
+    "    image_half_width = penumbra * 2 + radius\n",
+    "    \n",
+    "    x = np.arange(-image_half_width, image_half_width + dx, dx)\n",
+    "    xx, yy = np.meshgrid(x, x)\n",
+    "    \n",
+    "    with warnings.catch_warnings():\n",
+    "        warnings.simplefilter(\"ignore\")\n",
+    "        z = np.sqrt(bb_radius**2 - xx**2 - yy**2) / bb_radius\n",
+    "\n",
+    "    z[np.isnan(z)] = 0\n",
+    "    \n",
+    "    sig = profiles.scaled_penumbra_sig() * penumbra\n",
+    "    sig_pixel = sig / dx\n",
+    "    \n",
+    "    filtered = scipy.ndimage.gaussian_filter(z, sig_pixel)\n",
+    "    interp = scipy.interpolate.RegularGridInterpolator((x, x), filtered, bounds_error=False, fill_value=None)\n",
+    "    \n",
+    "    def bb_attenuation(x, y):        \n",
+    "        return 1 - bb_interp((x, y)) * max_attenuation\n",
+    "    \n",
+    "    return bb_attenuation"
+   ]
   },
   {
    "cell_type": "code",
@@ -272,7 +306,56 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bb_attenuation_map = create_bb_attenuation_func(bb_diameter, penumbra_width/3, bb_attenuation)\n",
+    "\n",
+    "result = bb_attenuation_map(xx, yy)\n",
+    "\n",
+    "plt.pcolormesh(xx, yy, result)\n",
+    "plt.colorbar()\n",
+    "plt.axis('equal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "field_centre = [0, 0]\n",
+    "side_lengths = [20, 24]\n",
+    "penumbra_width = 2\n",
+    "rotation = 20\n",
+    "\n",
+    "bb_centre = [2, 2]\n",
+    "bb_diameter = 8\n",
+    "bb_attenuation = 0.3\n",
+    "\n",
+    "\n",
+    "def create_field_with_bb_func(field_centre, bb_centre, side_lengths, bb_diameter, penumbra_width, rotation, bb_attenuation):\n",
+    "    field = profiles.create_rectangular_field_function(\n",
+    "        field_centre, side_lengths, penumbra_width, rotation)\n",
+    "    \n",
+    "    bb_penumbra = penumbra_width / 3\n",
+    "    bb_attenuation_map = create_bb_attenuation_func(bb_diameter, bb_penumbra, bb_attenuation)\n",
+    "    \n",
+    "    def field_with_bb(x, y):\n",
+    "        return field(x, y) * bb_attenuation_map(x - bb_centre[0], y - bb_centre[1])\n",
+    "    \n",
+    "    return field_with_bb\n",
+    "\n",
+    "\n",
+    "field_with_bb = create_field_with_bb_func(field_centre, bb_centre, side_lengths, bb_diameter, penumbra_width, rotation, bb_attenuation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_field_with_profiles(field_with_bb)"
+   ]
   }
  ],
  "metadata": {
