Wlutz error on disagree

--- a/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Compare Monaco and iCOM.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Compare Monaco and iCOM.ipynb
@@ -72,6 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import pathlib  # for filepath path tooling\n",
     "import lzma  # to decompress the iCOM file\n",
     "\n",
@@ -127,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "patient_id = '014495'"
+    "patient_id = '011088'"
    ]
   },
   {
@@ -227,6 +228,7 @@
    "outputs": [],
    "source": [
     "all_tel_paths = list(monaco_directory.glob(f'*~{patient_id}/plan/*/*tel.1'))\n",
+    "all_tel_paths = sorted(all_tel_paths, key=os.path.getmtime)\n",
     "all_tel_paths"
    ]
   },
@@ -256,6 +258,7 @@
    "outputs": [],
    "source": [
     "icom_deliveries = list(icom_directory.glob(f'{patient_id}_*/*.xz'))\n",
+    "icom_deliveries = sorted(icom_deliveries, key=os.path.getmtime)\n",
     "icom_deliveries"
    ]
   },
@@ -286,8 +289,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "monaco_plan_and_file_name = 'RAXILLARETREAT/tel.1'  # plan directory and file name\n",
-    "icom_deliveries = ['20020101_054014']  # iCOM timestamps"
+    "monaco_plan_and_file_name = 'TSPINE/tel.1'  # plan directory and file name\n",
+    "icom_deliveries = ['20200304_141614']  # iCOM timestamps"
    ]
   },
   {
