--- a/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Direct Logfile Monaco compare.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Direct Logfile Monaco compare.ipynb
@@ -56,7 +56,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# additional_path = pathlib.Path(input())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# custom_logfile_paths = [pathlib.Path(r'\\\\physics-server\\LinacLogFiles\\archive\\20_01_15 06_22_56 Z .trf')]\n",
+    "# custom_logfile_paths = [additional_path]\n",
     "custom_logfile_paths = []"
    ]
   },
@@ -73,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "patient_id = '014484'\n",
+    "patient_id = '015086'\n",
     "\n",
     "percent_deviation = 2\n",
     "mm_dist_threshold = 0.5"
@@ -201,6 +211,7 @@
    "outputs": [],
    "source": [
     "logfiles_to_check = [path for path, field_id in zip(paths, field_ids) if field_id in fields_at_site['field_id'].array] + custom_logfile_paths\n",
+    "# logfiles_to_check = [logfiles_to_check[-1]]\n",
     "logfiles_to_check"
    ]
   },
@@ -228,8 +239,12 @@
     "\n",
     "        for trf_file in logfiles_to_check:\n",
     "            markdown_print(f\"### `{trf_file}`\")\n",
-    "\n",
-    "            mudensity_trf = get_mu_density_from_file(trf_file)\n",
+    "            \n",
+    "            try:\n",
+    "                mudensity_trf = get_mu_density_from_file(trf_file)\n",
+    "            except Exception as e:\n",
+    "                traceback.print_exc()\n",
+    "                continue\n",
     "\n",
     "            gamma = calc_gamma(to_tuple(mudensity_tel), to_tuple(mudensity_trf))\n",
     "\n",
@@ -266,6 +281,13 @@
     "    except Exception as e:\n",
     "        traceback.print_exc()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
