--- a/examples/site-specific/cancer-care-associates/production/Winston Lutz/Arc Method/Arc Analysis.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Winston Lutz/Arc Method/Arc Analysis.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "working_dir = pathlib.Path(r\"\\\\pdc\\OneDrive$\\RCCC Specific Files\\Linac Beam Data Record\\Synergy 2694\\QA\\20200128_monthly\\WLutz\")\n",
+    "working_dir = pathlib.Path(r\"\\\\pdc\\OneDrive$\\RCCC Specific Files\\Linac Beam Data Record\\Synergy 2694\\QA\\20200303_post_steering_power_supply\\Wlutz\")\n",
     "output_dir = working_dir.joinpath('results')\n",
     "output_dir.mkdir(exist_ok=True)"
    ]
@@ -874,8 +874,8 @@
    "outputs": [],
    "source": [
     "for key in movie_keys:   \n",
-    "    dataframes[key]['Field - BB x (mm)'] = dataframes[key]['Field x (mm)'] - dataframes[key]['BB x [with predictions] (mm)']\n",
-    "    dataframes[key]['Field - BB y (mm)'] = dataframes[key]['Field y (mm)'] - dataframes[key]['BB y [with predictions] (mm)']"
+    "    dataframes[key]['Field - BB x (mm)'] = dataframes[key]['Field x (mm)'] - dataframes[key]['BB x (mm)']\n",
+    "    dataframes[key]['Field - BB y (mm)'] = dataframes[key]['Field y (mm)'] - dataframes[key]['BB y (mm)']"
    ]
   },
   {
@@ -908,15 +908,18 @@
     "            \n",
     "    x = np.linspace(-180, 180)\n",
     "\n",
-    "    if axis == 'y':\n",
-    "        plt.plot(x, 0.6*np.cos(x*np.pi/180), 'k', label='\"Ideal\"')\n",
-    "        plt.plot(x, 0.6*np.cos(x*np.pi/180)-0.5, 'r', label='0.5 mm \"bounds\"', alpha=0.2)\n",
-    "        plt.plot(x, 0.6*np.cos(x*np.pi/180)+0.5, 'r', alpha=0.2)\n",
+    "#     if axis == 'y':\n",
+    "#         plt.plot(x, 0.6*np.cos(x*np.pi/180), 'k', label='\"Ideal\"')\n",
+    "#         plt.plot(x, 0.6*np.cos(x*np.pi/180)-0.5, 'r', label='0.5 mm \"bounds\"', alpha=0.2)\n",
+    "#         plt.plot(x, 0.6*np.cos(x*np.pi/180)+0.5, 'r', alpha=0.2)\n",
     "        \n",
-    "    elif axis == 'x':\n",
-    "        plt.plot(x, np.zeros_like(x), 'k', label='\"Ideal\"')\n",
-    "        plt.plot(x, np.zeros_like(x)-0.5, 'r', label='0.5 mm \"bounds\"', alpha=0.2)\n",
-    "        plt.plot(x, np.zeros_like(x)+0.5, 'r', alpha=0.2)\n",
+    "#     elif axis == 'x':\n",
+    "#         plt.plot(x, np.zeros_like(x), 'k', label='\"Ideal\"')\n",
+    "#         plt.plot(x, np.zeros_like(x)-0.5, 'r', label='0.5 mm \"bounds\"', alpha=0.2)\n",
+    "#         plt.plot(x, np.zeros_like(x)+0.5, 'r', alpha=0.2)\n",
+    "\n",
+    "    plt.grid(True)\n",
+    "#     plt.ylim([-2,2])\n",
     "\n",
     "    \n",
     "    plt.legend()\n",
