--- a/docs/howto/gamma/effect-of-noise.ipynb
+++ b/docs/howto/gamma/effect-of-noise.ipynb
@@ -336,7 +336,7 @@
     "\n",
     "> [Evaluating IMRT and VMAT dose accuracy: Practical examples of failure to detect systematic errors when applying a commonly used metric and action levels](http://download.xuebalib.com/xuebalib.com.42814.pdf)\n",
     "\n",
-    "A key take home sentence from that paper relevant to this `pymedphys.gamma` utility is the following:\n",
+    "A key take home message from that paper relevant to this `pymedphys.gamma` utility is the following:\n",
     "\n",
     "> Using 3%G/3 mm gamma passing rates as a basis of gauging “sufficient accuracy” as per TG-119 has knock-on effects\n",
     "outside of commissioning. One such effect is that it is often\n",
