--- a/docs/howto/gamma/effect-of-noise.ipynb
+++ b/docs/howto/gamma/effect-of-noise.ipynb
@@ -227,7 +227,7 @@
     "no_noise_passing = 100 * np.round(np.sum(valid_gamma_no_noise <= 1) / len(valid_gamma_no_noise), 4)\n",
     "\n",
     "plt.figure()\n",
-    "plt.title(f'Gamma Histogram | Passing rate = {no_noise_passing}%')\n",
+    "plt.title(f'Gamma Histogram | Passing rate = {round(no_noise_passing}%')\n",
     "plt.xlabel('Gamma')\n",
     "plt.ylabel('Number of pixels')\n",
     "\n",
