diagnostic images created

--- a/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/000-attempt-arbitrary-shape-encoder.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/000-attempt-arbitrary-shape-encoder.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import warnings\n",
     "\n",
     "import numpy as np\n",
@@ -95,7 +96,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pymedphys._mocks import wlutz, profiles"
+    "from pymedphys._mocks import wlutz, profiles\n",
+    "from pymedphys._wlutz import reporting"
    ]
   },
   {
@@ -110,7 +112,8 @@
     "        field_centre = tf.random.uniform((2,), -0.5, 0.5)\n",
     "        field_side_lengths = tf.random.uniform((2,), 0.2, 1.5)\n",
     "        field_penumbra = tf.random.uniform((), 0.05, 0.2).numpy()\n",
-    "        field_rotation = tf.random.uniform((), 0, 180).numpy()\n",
+    "        field_rotation_raw = tf.random.uniform((), -1, 1).numpy()\n",
+    "        field_rotation = field_rotation_raw * 180\n",
     "\n",
     "        bb_centre = tf.random.uniform((2,), -0.5, 0.5)\n",
     "        bb_diameter = tf.random.uniform((), 0.05, 0.3).numpy()\n",
@@ -143,7 +146,7 @@
     "        if log_mean_sqr_diff > -10:\n",
     "            break\n",
     "            \n",
-    "    parameters = tf.concat([field_centre, field_side_lengths, [field_rotation], bb_centre, [bb_diameter]], 0)\n",
+    "    parameters = tf.concat([field_centre, field_side_lengths, [field_rotation_raw], bb_centre, [bb_diameter]], 0)\n",
     "    img = tf.convert_to_tensor(with_bb, dtype=tf.float32)\n",
     "            \n",
     "    return parameters, img\n",
@@ -252,10 +255,73 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def extract_parameters(tensor_parameters):\n",
+    "    parameters = {\n",
+    "        'field_centre': (tensor_parameters[0], tensor_parameters[1]),\n",
+    "        'field_side_lengths': (tensor_parameters[2], tensor_parameters[3]),\n",
+    "        'field_rotation': tensor_parameters[4] * 180,\n",
+    "        'bb_centre': (tensor_parameters[5], tensor_parameters[6]),\n",
+    "        'bb_diameter': tensor_parameters[7]\n",
+    "    }\n",
+    "    \n",
+    "    return parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_figure(image, field_centre, field_side_lengths, field_rotation, bb_centre, bb_diameter):\n",
+    "    dim = image.shape\n",
+    "    x = np.linspace(-1, 1, dim[0])\n",
+    "    y = x\n",
+    "    \n",
+    "    return reporting.image_analysis_figure(\n",
+    "        x, y, np.array(image),\n",
+    "        np.array(bb_centre), np.array(field_centre), np.array(field_rotation),\n",
+    "        bb_diameter, field_side_lengths, penumbra=0.2, units=''\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def results_figures(model, batch_images, batch_ground_truth_parameters):\n",
+    "    batch_dim = batch_images.shape\n",
+    "    num_batches = batch_dim[0]\n",
+    "    image_shape = dim[1]\n",
+    "    x = np.linspace(-1, 1, image_shape)\n",
+    "    y = x\n",
+    "    \n",
+    "    batch_predicted_parameters = model(batch_images, training=True)\n",
+    "    \n",
+    "    for i in range(num_batches):\n",
+    "        \n",
+    "        ground_truth_parameters = extract_parameters(batch_ground_truth_parameters[i, :])\n",
+    "        predicted_parameters = extract_parameters(batch_predicted_parameters[i, :])\n",
+    "    \n",
+    "        fig, axs = create_figure(batch_images[i,:,:], **ground_truth_parameters)\n",
+    "        axs[0,0].set_title(\"Ground Truth\")\n",
     "\n",
-    "loss_object = tf.keras.losses.BinaryCrossentropy(from_logits=True)\n",
+    "        fig, axs = create_figure(batch_images[i,:,:], **predicted_parameters)\n",
+    "        axs[0,0].set_title(\"Predicted\")\n",
     "\n",
-    "# loss_object?"
+    "        plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for parameters, img in dataset_small_batch.take(1):\n",
+    "    results_figures(model, img, parameters)"
    ]
   },
   {
@@ -277,9 +343,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "generator_optimizer = tf.keras.optimizers.Adam(2e-4, beta_1=0.5)\n",
-    "discriminator_optimizer = tf.keras.optimizers.Adam(2e-4, beta_1=0.5)"
+    "loss_object = tf.keras.losses.BinaryCrossentropy(from_logits=True)\n",
+    "optimizer = tf.keras.optimizers.Adam(2e-4, beta_1=0.5)"
    ]
   },
   {
@@ -290,11 +363,34 @@
    "source": [
     "checkpoint_dir = './training_checkpoints'\n",
     "checkpoint_prefix = os.path.join(checkpoint_dir, \"ckpt\")\n",
-    "checkpoint = tf.train.Checkpoint(generator_optimizer=generator_optimizer,\n",
-    "                                 discriminator_optimizer=discriminator_optimizer,\n",
-    "                                 generator=generator,\n",
-    "                                 discriminator=discriminator)"
+    "checkpoint = tf.train.Checkpoint(optimizer=optimizer,\n",
+    "                                 model=model)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tf.train.Checkpoint?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# [field_centre, field_side_lengths, [field_rotation_raw], bb_centre, [bb_diameter]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
